[package]
name = "mqtt_dali"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"

# serde_json is just for the example, not required in general
tokio = { version="1", features = ["full"]}
serde_json = "1.0"
serde = { version = "1.0.134", features = ["derive"] }
#rumqttc = { path="../../rumqtt/rumqttc" }
rumqttc = { version = "0.18.0", default-features = false }
rustop = "1.1.1"
rand = "0.8.4"
rppal = "0.14.1"
log = "0.4.14"

# to run with loggin use
#  RUST_LOG=trace,rumqttc=off mqtt_dali ...
env_logger = "0.10.0"
regex = "1.5.4"