[package]
name = "mqtt_dali"
version = "0.1.1"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
error-stack = "0.4.1"

# serde_json is just for the example, not required in general
tokio = { version="1", features = ["full"]}
serde_json = "1.0"
serde = { version = "1.0.134", features = ["derive"] }
#rumqttc = { path="../../rumqtt/rumqttc" }
rumqttc = { version = "0.23.0", default-features = false }
rustop = "1.1.1"
rand = "0.8.4"
rppal = "0.16.0"
tracing = { version = "0.1.27"  }
log = "0.4.14"
tracing-init = { git="http://github.com/yuvalrakavy/tracing-init.git" }
built = "0.7.1" 

# to run with loggin use
#  RUST_LOG=trace,rumqttc=off mqtt_dali ...

regex = "1.5.4"

[build-dependencies]
built = { version= "0.7.1", features = ["chrono"] }
